--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,3 @@
 {
-  "*.ts": ["prettier --write", "eslint"],
-  "*.html": ["eslint", "prettier --write"],
-  "*.scss": "prettier --write"
+  "**/*.{ts,tsx}": ["eslint", "prettier --write"] 
 }
