--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/destructuring-assignment": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "import/no-extraneous-dependencies": "off"
   },
   "ignorePatterns": ["node_modules", ".next", "components", "lib"]
 }
