--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "prettier": "^3.0.3",
     "react": "18.2.0",
