--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss": "8.4.29",
     "prettier": "^3.0.3",
     "react": "18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
@@ -65,6 +66,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.15.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "8.48.0",
