--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "eslint-config-next": "13.4.19",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.274.0",
     "next": "13.5.4",
     "next-auth": "^4.23.1",
