--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-select": "^5.7.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
@@ -69,6 +70,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.15.1",
+    "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "8.48.0",
