--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
     "@nextui-org/modal": "^2.0.23",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -48,10 +49,12 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "eslint-config-next": "13.4.19",
+    "i": "^0.3.7",
     "jquery": "^3.7.1",
     "lucide-react": "^0.274.0",
     "next": "13.5.4",
     "next-auth": "^4.23.1",
+    "npm": "^10.2.4",
     "postcss": "8.4.29",
     "prettier": "^3.0.3",
     "react": "18.2.0",
